fixed top sub menu collapse

--- a/sass/bmm.scss
+++ b/sass/bmm.scss
@@ -19,10 +19,10 @@
 }
 
 .bmm-sub-menu {
-    position: absolute; 
+    //position: absolute; 
     width: 100%;
     z-index: 999;
-    left: 0;
+    //left: 0;
     background: #fff;
     padding-top: 0.5rem;
 }
@@ -35,6 +35,10 @@
         padding: 5px 10px;
         display: inline-block;
         width: 100%;
+    }
+    
+    & > .bmm-sub-menu {
+        position: absolute;
     }
 }
 
@@ -69,9 +73,24 @@
     float: left;
     padding-right: 2%;
     
-    & > a {
-        display: none;
+/*
+    & > a.bmm-menu-link {
+        padding: 0;
     }
+*/
+    
+/*
+    &:before {
+        //content: "";
+        //display: block;
+    }
+    
+    &:after {
+        content: "";
+        display: table;
+        clear: both;
+    } 
+*/    
 
     &.total-columns-2 {
         width: 49%;
